# avt_homework

./: .gitignore  README.md  docker-compose.yml  run.sh
.github/workflows/: docker-image.yml  linter.yml
docker/: Dockerfile  requirements.txt  ros_entrypoint.sh
src/traffic_light_fetcher/: CMakeLists.txt  package.xml  setup.py
src/traffic_light_fetcher/include/traffic_light_fetcher/: tl_detector.py
src/traffic_light_fetcher/launch/: traffic_light_fetcher.launch
src/traffic_light_fetcher/nodes/traffic_light_fetcher/: tl_analysis  tl_fetcher  traffic_light_fetcher.py
src/traffic_light_fetcher/src/: traffic_light_analysis.py  traffic_light_fetcher.py
src/traffic_light_fetcher/src/traffic_light_fetcher/: tl_detection.py  tl_detector.py
