<?xml version="1.0"?>
<package format="2">
  <name>traffic_light_fetcher</name>
  <version>0.0.0</version>
  <description>The traffic_light_fetcher package</description>

  <maintainer email="mahirgulzar343@gmail.com">Mahir Gulzar</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>

</package>